--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "flux-standard-action",
   "version": "0.6.1",
   "description": "A human-friendly standard for Flux action objects",
-  "main": "lib/index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "make test",
     "prepublish": "make clean build"
