Upgrade all dependencies & enforce action.type
- action.type must be a string or Symbol (the latter may or may not be
dropped, so test support can also be removed easily)
- use npm scripts instead of Makefile
- use Babel 6
- use nyc for code coverage and coveralls
- test against latest versions of Node LTS
- add editorconfig

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,5 +1,5 @@
 {
-  "extends": "eslint-config-airbnb",
+  "extends": "eslint-config-airbnb-base",
   "env": {
     "mocha": true,
     "node": true
@@ -8,8 +8,8 @@
     "expect": true
   },
   "rules": {
-    "padded-blocks": 0,
-    "no-use-before-define": [2, "nofunc"],
-    "no-unused-expressions": 0
+    "no-use-before-define": 0,
+    "no-unused-expressions": 0,
+    "import/no-extraneous-dependencies": ["error", {"devDependencies": ["!test/**/*.js"]}]
   }
 }
