--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,8 @@
 {
-  "stage": 0,
-  "loose": "all"
+  "presets": ["stage-0", ["es2015", { "loose": true }]],
+  "env": {
+    "test": {
+      "plugins": ["istanbul"]
+    }
+  }
 }
