--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,7 @@
+sudo: false
 language: node_js
 node_js:
-  - "iojs"
+  - "stable"
+  - 4
+
+after_success: "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
