--- a/package.json
+++ b/package.json
@@ -3,9 +3,17 @@
   "version": "0.6.1",
   "description": "A human-friendly standard for Flux action objects",
   "main": "lib/index.js",
+  "files": [
+    "lib"
+  ],
   "scripts": {
-    "test": "make test",
-    "prepublish": "make clean build"
+    "prebuild": "npm run clean",
+    "build": "babel src --out-dir lib",
+    "clean": "rimraf lib/",
+    "lint": "eslint src/ test/",
+    "prepublish": "npm test && npm run build",
+    "pretest": "npm run lint",
+    "test": "cross-env NODE_ENV=test nyc mocha"
   },
   "keywords": [
     "flux",
@@ -16,15 +24,40 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel": "^5.6.14",
-    "babel-core": "^5.6.15",
-    "babel-eslint": "^4.1.8",
+    "babel": "^6.5.2",
+    "babel-cli": "^6.16.0",
+    "babel-core": "^6.17.0",
+    "babel-eslint": "^7.0.0",
+    "babel-plugin-istanbul": "^2.0.1",
+    "babel-preset-es2015": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.0.0",
-    "eslint": "^0.24.0",
-    "eslint-config-airbnb": "0.0.6",
-    "mocha": "^2.2.5"
+    "coveralls": "^2.11.14",
+    "cross-env": "^3.1.1",
+    "eslint": "^3.7.1",
+    "eslint-config-airbnb-base": "^8.0.0",
+    "eslint-plugin-import": "^2.0.0",
+    "mocha": "^3.0.0",
+    "nyc": "^8.3.0",
+    "rimraf": "^2.5.4"
   },
   "dependencies": {
-    "lodash.isplainobject": "^3.2.0"
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1",
+    "lodash.issymbol": "^4.0.1"
+  },
+  "nyc": {
+    "all": true,
+    "sourceMap": false,
+    "instrument": false,
+    "reporter": [
+      "text-summary",
+      "lcov"
+    ],
+    "check-coverage": true,
+    "lines": 100,
+    "statements": 100,
+    "functions": 100,
+    "branches": 100
   }
 }
