Clean up index. Update package.json

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.6.1",
   "description": "A human-friendly standard for Flux action objects",
   "main": "lib/index.js",
+  "typings": "index.d.ts",
   "files": [
     "lib"
   ],
