--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.6.1",
   "description": "A human-friendly standard for Flux action objects",
   "main": "lib/index.js",
-  "typings": "src/index.d.ts",
+  "typings": "lib/index.d.ts",
   "files": [
     "lib"
   ],
   "scripts": {
     "prebuild": "npm run clean",
-    "build": "babel src --out-dir lib",
+    "build": "babel src --out-dir lib --copy-files",
     "clean": "rimraf lib/",
     "lint": "eslint src/ test/",
     "prepublish": "npm test && npm run build",
