--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,8 @@
 {
   "compilerOptions": {
-    "outDir": "tsc-out"
+    "outDir": "tsc-out",
+    "strictNullChecks": true,
+    "target": "es5"
   },
   "files": [
     "test/typings-test.ts"
