Adding eslint for typescript. Update yarn.lock

--- a/package.json
+++ b/package.json
@@ -48,9 +48,11 @@
     "typescript": "^2.0.10"
   },
   "dependencies": {
+    "eslint-plugin-typescript": "^0.1.0",
     "lodash.isplainobject": "^4.0.6",
     "lodash.isstring": "^4.0.1",
-    "lodash.issymbol": "^4.0.1"
+    "lodash.issymbol": "^4.0.1",
+    "typescript-eslint-parser": "^1.0.2"
   },
   "nyc": {
     "all": true,
