--- a/package.json
+++ b/package.json
@@ -45,14 +45,14 @@
     "mocha": "^3.1.2",
     "nyc": "^10.0.0",
     "rimraf": "^2.5.4",
-    "typescript": "^2.0.10"
+    "typescript": "^2.0.10",
+    "typescript-eslint-parser": "^1.0.2"
   },
   "dependencies": {
     "eslint-plugin-typescript": "^0.1.0",
     "lodash.isplainobject": "^4.0.6",
     "lodash.isstring": "^4.0.1",
-    "lodash.issymbol": "^4.0.1",
-    "typescript-eslint-parser": "^1.0.2"
+    "lodash.issymbol": "^4.0.1"
   },
   "nyc": {
     "all": true,
