--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "lint": "eslint src/ test/",
     "prepublish": "npm test && npm run build",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_ENV=test nyc mocha"
+    "test": "cross-env NODE_ENV=test nyc mocha",
+    "posttest": "tsc"
   },
   "repository": {
     "type": "git",
@@ -41,9 +42,12 @@
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-typescript": "^0.1.0",
     "mocha": "^3.1.2",
     "nyc": "^10.0.0",
-    "rimraf": "^2.5.4"
+    "rimraf": "^2.5.4",
+    "typescript": "^2.0.10",
+    "typescript-eslint-parser": "^1.0.2"
   },
   "dependencies": {
     "lodash.isplainobject": "^4.0.6",
