chore: add release tools to dev deps

--- a/package.json
+++ b/package.json
@@ -37,8 +37,10 @@
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
     "chai": "^3.5.0",
+    "conventional-github-releaser": "^1.1.3",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.3",
+    "dotenv": "^4.0.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
