--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "conventional-github-releaser": "^1.1.3",
     "coveralls": "^2.11.15",
     "cross-env": "^3.1.3",
+    "dirty-chai": "^1.2.2",
     "dotenv": "^4.0.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^11.0.1",
