--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,6 @@
 {
   "presets": ["stage-0", ["es2015", { "loose": true }]],
+  "plugins": ["lodash"],
   "env": {
     "test": {
       "plugins": ["istanbul"]
