--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "lint": "eslint src/ test/",
     "prepublish": "npm test && npm run build",
     "pretest": "npm run lint",
-    "test": "cross-env NODE_ENV=test nyc mocha",
+    "test": "jest",
     "posttest": "tsc"
   },
   "repository": {
@@ -37,18 +37,14 @@
     "babel-plugin-lodash": "^3.2.11",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-stage-0": "^6.16.0",
-    "chai": "^3.5.0",
     "conventional-github-releaser": "^1.1.3",
     "coveralls": "^2.11.15",
-    "cross-env": "^5.0.0",
-    "dirty-chai": "^1.2.2",
     "dotenv": "^4.0.0",
     "eslint": "^3.10.2",
     "eslint-config-airbnb-base": "^11.0.1",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-typescript": "^0.1.0",
-    "mocha": "^3.1.2",
-    "nyc": "^10.0.0",
+    "jest": "^20.0.4",
     "rimraf": "^2.5.4",
     "typescript": "^2.0.10",
     "typescript-eslint-parser": "^2.0.0"
@@ -56,18 +52,14 @@
   "dependencies": {
     "lodash": "^4.0.0"
   },
-  "nyc": {
-    "all": true,
-    "sourceMap": false,
-    "instrument": false,
-    "reporter": [
-      "text-summary",
-      "lcov"
-    ],
-    "check-coverage": true,
-    "lines": 100,
-    "statements": 100,
-    "functions": 100,
-    "branches": 100
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "branches": 100,
+        "functions": 100,
+        "lines": 100,
+        "statements": 100
+      }
+    }
   }
 }
