chore: removes unnecessary babel config
babel-plugin-istanbul is added automatically by jest

--- a/.babelrc
+++ b/.babelrc
@@ -1,9 +1,4 @@
 {
   "presets": ["stage-0", ["es2015", { "loose": true }]],
-  "plugins": ["lodash"],
-  "env": {
-    "test": {
-      "plugins": ["istanbul"]
-    }
-  }
+  "plugins": ["lodash"]
 }
