--- a/.travis.yml
+++ b/.travis.yml
@@ -4,14 +4,9 @@ node_js:
   - "stable"
   - 8
   - 6
-  - 4
-
-env:
-  global:
-    COVERALLS_PARALLEL: true
 
 cache: yarn
 
-script: "yarn test -- --coverage"
+script: "yarn test --coverage"
 
-after_success: "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+after_success: "npx codecov"
