--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   "license": "MIT",
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-eslint": "^8.2.3",
     "babel-plugin-lodash": "^3.3.2",
     "babel-preset-env": "^1.6.1",
     "eslint-plugin-prettier": "^2.6.0",
@@ -58,6 +57,7 @@
     "trailingComma": "none"
   },
   "jest": {
+    "collectCoverage": true,
     "coverageThreshold": {
       "global": {
         "branches": 100,
