chore: updates all devtools to use the new hotness (#107)
* removes test from pre-publish assuming master is always stable
* switches to codecov
* tests: uses camel cased filenames

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,10 @@ sudo: false
 language: node_js
 node_js:
   - "stable"
-  - 8
-  - 6
-  - 4
-
-env:
-  global:
-    COVERALLS_PARALLEL: true
+  - "lts/*"
 
 cache: yarn
 
-script: "yarn test -- --coverage"
+script: "yarn test"
 
-after_success: "cat ./coverage/lcov.info | ./node_modules/.bin/coveralls"
+after_success: "npx codecov"
