--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
     "lint": "xo",
     "prepublishOnly": "npm run build",
     "pretest": "npm run lint",
-    "test": "jest",
-    "posttest": "tsc"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
