--- a/package.json
+++ b/package.json
@@ -30,25 +30,27 @@
   "author": "Andrew Clark <acdlite@me.com>",
   "license": "MIT",
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-plugin-lodash": "^3.3.2",
-    "babel-preset-env": "^1.6.1",
-    "eslint-config-jest-files": "^0.1.2",
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/preset-env": "^7.3.4",
+    "babel-jest": "^24.5.0",
+    "babel-plugin-lodash": "^3.3.4",
+    "eslint-config-jest-files": "^0.1.3",
     "eslint-config-typescript-basic": "^1.0.1",
     "eslint-config-unicorn-camelcase": "^0.1.1",
-    "eslint-plugin-prettier": "^2.6.0",
-    "eslint-plugin-typescript": "^0.12.0",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-typescript": "^0.14.0",
     "husky": "^0.14.3",
-    "jest": "^22.4.3",
-    "prettier": "^1.12.1",
-    "pretty-quick": "^1.4.1",
-    "rimraf": "^2.6.1",
-    "typescript": "^2.8.3",
-    "typescript-eslint-parser": "^15.0.0",
-    "xo": "^0.20.3"
+    "jest": "^24.5.0",
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0",
+    "rimraf": "^2.6.3",
+    "typescript": "^3.3.3333",
+    "typescript-eslint-parser": "^22.0.0",
+    "xo": "^0.24.0"
   },
   "dependencies": {
-    "lodash": "^4.0.0"
+    "lodash": "^4.17.11"
   },
   "xo": {
     "prettier": true,
@@ -76,6 +78,9 @@
         "lines": 100,
         "statements": 100
       }
+    },
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
     }
   }
 }
