--- a/package.json
+++ b/package.json
@@ -33,18 +33,21 @@
     "@babel/cli": "^7.2.3",
     "@babel/core": "^7.3.4",
     "@babel/preset-env": "^7.3.4",
+    "@types/jest": "^24.0.11",
+    "@typescript-eslint/eslint-plugin": "^1.5.0",
     "babel-jest": "^24.5.0",
     "babel-plugin-lodash": "^3.3.4",
+    "eslint": "^5.0.0",
     "eslint-config-jest-files": "^0.1.3",
     "eslint-config-typescript-basic": "^1.0.1",
     "eslint-config-unicorn-camelcase": "^0.1.1",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-typescript": "^0.14.0",
     "husky": "^0.14.3",
     "jest": "^24.5.0",
     "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
     "rimraf": "^2.6.3",
+    "ts-jest": "^24.0.1",
     "typescript": "^3.3.3333",
     "typescript-eslint-parser": "^22.0.0",
     "xo": "^0.24.0"
@@ -67,7 +70,8 @@
   "prettier": {
     "singleQuote": true,
     "bracketSpacing": true,
-    "trailingComma": "none"
+    "trailingComma": "none",
+    "endOfLine": "auto"
   },
   "jest": {
     "collectCoverage": true,
