--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "@types/jest": "^24.0.11",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "babel-jest": "^24.7.1",
-    "babel-plugin-lodash": "^3.3.4",
     "eslint-config-jest-files": "^0.1.3",
     "eslint-config-typescript-basic": "^1.0.1",
     "eslint-config-unicorn-camelcase": "^0.1.1",
@@ -52,7 +51,8 @@
     "xo": "^0.24.0"
   },
   "dependencies": {
-    "lodash": "^4.17.11"
+    "lodash.isplainobject": "^4.0.6",
+    "lodash.isstring": "^4.0.1"
   },
   "xo": {
     "prettier": true,
